# finnhub-mcp-server

./: .env.example  .gitignore  README.md  app.py  main.py  package.json  pyproject.toml  requirements.txt  vercel.json
src/: constants.ts  index.ts  types.ts
src/finnhub_mcp_server/: __init__.py  __main__.py
src/schemas/: index.ts
src/services/: api.ts  formatting.ts
src/tools/: additional.ts  candle.ts  company.ts  financials.ts  news.ts  quote.ts
