[project]
name = "finnhub-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Finnhub alternative data APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.13.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "certifi>=2024.0.0",
    "pip-system-certs>=4.0",
]

[project.scripts]
finnhub-mcp-server = "finnhub_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
